--- a/Controller/Pipfile
+++ b/Controller/Pipfile
@@ -4,7 +4,42 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
+django = "==4.0.9"
+djangorestframework = "*"
+django-filter = "*"
+cookiecutter = "*"
+pytz = "==2022.7.1"
+python-slugify = "==8.0.0"
+pillow = "==9.4.0"
+argon2-cffi = "==21.3.0"
+redis = "==4.5.1"
+hiredis = "==2.2.1"
+django-environ = "==0.9.0"
+django-model-utils = "==4.3.1"
+django-allauth = "==0.52.0"
+django-crispy-forms = "==1.14.0"
+crispy-bootstrap5 = "==0.7"
+django-redis = "==5.2.0"
+werkzeug = {version = "==2.2.2", extras = ["watchdog"]}
+ipdb = "==0.13.11"
+psycopg2-binary = "==2.9.5"
+mypy = "==0.991"
+django-stubs = "==1.14.0"
+pytest = "==7.2.1"
+pytest-sugar = "==0.9.6"
+sphinx = "==6.1.3"
+sphinx-autobuild = "==2021.3.14"
+flake8 = "==6.0.0"
+flake8-isort = "==6.0.0"
+coverage = "==7.1.0"
+black = "==23.1.0"
+pylint-django = "==2.5.3"
+pre-commit = "==3.0.4"
+factory-boy = "==3.2.1"
+django-debug-toolbar = "==3.8.1"
+django-extensions = "==3.2.1"
+django-coverage-plugin = "==3.0.0"
+pytest-django = "==4.5.2"
 
 [dev-packages]
 
